result/0613-143632/stderr.log
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c: In function ‘second_line’:
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c:52:15: error: conflicting types for ‘pixel2’; have ‘pixelRGB *’ {aka ‘struct _pixelRGB *’}
   52 |     pixelRGB* pixel2 = getPixel(2, 0);
      |               ^~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c:49:9: note: previous declaration of ‘pixel2’ with type ‘int’
   49 |     int pixel2;
      |         ^~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c:52:24: warning: implicit declaration of function ‘getPixel’ [-Wimplicit-function-declaration]
   52 |     pixelRGB* pixel2 = getPixel(2, 0);
      |                        ^~~~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c: At top level:
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c:57:16: error: unknown type name ‘Image’
   57 | void max_pixel(Image *img)
      |                ^~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/features.c:81:16: error: unknown type name ‘Image’
   81 | void min_pixel(Image *img) {
      |                ^~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:54:5: error: unknown type name ‘Image’
   54 |     Image img;
      |     ^~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:56:35: warning: passing argument 2 of ‘read_image_data’ from incompatible pointer type [-Wincompatible-pointer-types]
   56 |     if (read_image_data(filename, &img) != 0)
      |                                   ^~~~
      |                                   |
      |                                   int *
In file included from /home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:5:
/home/runner/work/pgi-2025-the_harmonic_relics/lib/estia_image/include/estia-image.h:13:59: note: expected ‘unsigned char **’ but argument is of type ‘int *’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                           ~~~~~~~~~~~~~~~~^~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:56:9: error: too few arguments to function ‘read_image_data’
   56 |     if (read_image_data(filename, &img) != 0)
      |         ^~~~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/lib/estia_image/include/estia-image.h:13:5: note: declared here
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |     ^~~~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:62:5: warning: implicit declaration of function ‘max_pixel’ [-Wimplicit-function-declaration]
   62 |     max_pixel(&img);
      |     ^~~~~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:64:12: error: ‘command’ undeclared (first use in this function)
   64 | if (strcmp(command, "min_pixel") == 0)
      |            ^~~~~~~
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:66:5: warning: implicit declaration of function ‘min_pixel’; did you mean ‘tenth_pixel’? [-Wimplicit-function-declaration]
   66 |     min_pixel(&img);
      |     ^~~~~~~~~
      |     tenth_pixel
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_harmonic_relics/pgi-2025-the_harmonic_relics/src/main.c:70:1: error: expected declaration or statement at end of input
   70 | }
      | ^
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2